fixed list alignment

--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -1,4 +1,11 @@
 .main {
   display: flex;
   justify-content: center;
+  flex-flow: column;
+  text-align: center;
+}
+
+.list {
+  display: flex;
+  justify-content: center;
 }
