--- a/src/components/Display/Display.module.css
+++ b/src/components/Display/Display.module.css
@@ -1,4 +1,6 @@
 .main {
   display: flex;
   justify-content: center;
+  flex-flow: column;
+  text-align: center;
 }
